-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b23
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8243351 | 11.0.8-oracle | Roland Westrelin | P3 | Resolved | Fixed | b04 |
| JDK-8238540 | 11.0.7 | Roland Westrelin | P3 | Resolved | Fixed | b03 |
C2 compiler failed with the assertion during loop optimizations when compiling the following method with the following stack:
Current CompileTask:
C2:17926321 63147 ! 4 com.sun.jck.lib.ExecJCKTestSameJVMCmd::execute (397 bytes)
Stack: [0x00007f2880193000,0x00007f2880294000], sp=0x00007f288028d980, free space=1002k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x178e0aa] Type::make_constant_from_array_element(ciArray*, int, int, BasicType, bool)+0xba
V [libjvm.so+0x12f9615] LoadNode::Value(PhaseGVN*) const+0xef5
V [libjvm.so+0x14dd387] PhaseIterGVN::transform_old(Node*)+0x2b7
V [libjvm.so+0x14d6f19] PhaseIterGVN::optimize()+0x59
V [libjvm.so+0x1202e6f] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xcef
V [libjvm.so+0x9d8cca] Compile::optimize_loops(int&, PhaseIterGVN&, LoopOptsMode) [clone .part.413]+0x2ca
V [libjvm.so+0x9dc078] Compile::Optimize()+0xc78
V [libjvm.so+0x9dcfbc] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd7c
V [libjvm.so+0x7d7fa1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
V [libjvm.so+0x9ea8db] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x34b
V [libjvm.so+0x9eb888] CompileBroker::compiler_thread_loop()+0x458
V [libjvm.so+0x175673b] JavaThread::thread_main_inner()+0x20b
V [libjvm.so+0x17569b9] JavaThread::run()+0x1b9
V [libjvm.so+0x1751cfd] Thread::call_run()+0x6d
V [libjvm.so+0x14318a6] thread_native_entry(Thread*)+0x106
Current CompileTask:
C2:17926321 63147 ! 4 com.sun.jck.lib.ExecJCKTestSameJVMCmd::execute (397 bytes)
Stack: [0x00007f2880193000,0x00007f2880294000], sp=0x00007f288028d980, free space=1002k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x178e0aa] Type::make_constant_from_array_element(ciArray*, int, int, BasicType, bool)+0xba
V [libjvm.so+0x12f9615] LoadNode::Value(PhaseGVN*) const+0xef5
V [libjvm.so+0x14dd387] PhaseIterGVN::transform_old(Node*)+0x2b7
V [libjvm.so+0x14d6f19] PhaseIterGVN::optimize()+0x59
V [libjvm.so+0x1202e6f] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0xcef
V [libjvm.so+0x9d8cca] Compile::optimize_loops(int&, PhaseIterGVN&, LoopOptsMode) [clone .part.413]+0x2ca
V [libjvm.so+0x9dc078] Compile::Optimize()+0xc78
V [libjvm.so+0x9dcfbc] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xd7c
V [libjvm.so+0x7d7fa1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
V [libjvm.so+0x9ea8db] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x34b
V [libjvm.so+0x9eb888] CompileBroker::compiler_thread_loop()+0x458
V [libjvm.so+0x175673b] JavaThread::thread_main_inner()+0x20b
V [libjvm.so+0x17569b9] JavaThread::run()+0x1b9
V [libjvm.so+0x1751cfd] Thread::call_run()+0x6d
V [libjvm.so+0x14318a6] thread_native_entry(Thread*)+0x106
- backported by
-
JDK-8238540 C2: assert(con.basic_type() != T_ILLEGAL) failed: elembt=byte; loadbt=void; unsigned=0
-
- Resolved
-
-
JDK-8243351 C2: assert(con.basic_type() != T_ILLEGAL) failed: elembt=byte; loadbt=void; unsigned=0
-
- Resolved
-